--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <title>Pokedex</title>
 </head>
 <body>
+  <header>
+    <h1>Pokedex</h1>
+  </header>
   <div class="container">
     <div class="search">
       <input id="input" type="text" placeholder="Nome ou id do Pokemon">
@@ -18,6 +21,9 @@
       <img id="pokeball-bg" src="./pokeball-background.png" alt="" srcset="">
     </div>
   </div>
+  <footer>
+    &copyMadruga
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
